# excore-freenet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
config/: freenet-enterprise.toml
crates/core/: Cargo.toml
crates/core/src/: auth.rs  authz.rs  client_events.rs  config.rs  contract.rs  lib.rs  node.rs  ring.rs
crates/core/src/auth/: api_key.rs  middleware.rs  provider.rs
crates/core/src/authz/: context.rs  policy.rs
crates/core/src/client_events/: admin_endpoints.rs  combinator.rs  test_correlation.rs  websocket.rs
crates/core/src/consensus/: bft.rs  mod.rs  threshold.rs
crates/core/src/contract/: executor.rs  fair_queue.rs  handler.rs  lifecycle.rs
crates/core/src/contract/executor/: runtime.rs
crates/core/src/contract/lifecycle/: deletion.rs  gc.rs
crates/core/src/contract/storages/: redb.rs  sqlite.rs
crates/core/src/crypto/: fhe.rs  mod.rs  post_quantum.rs
crates/core/src/ml/: backend.rs  congestion.rs  features.rs  mod.rs  models.rs  routing.rs
crates/core/src/node/: maintenance.rs  op_state_manager.rs  p2p_impl.rs
crates/core/src/performance/: batching.rs  io_uring.rs  memory.rs  mod.rs  simd.rs
crates/core/src/ring/: hosting.rs
crates/core/src/ring/hosting/: cache.rs
crates/core/src/server/: client_api.rs
crates/core/src/wasm_runtime/: contract_store.rs  mock_state_storage.rs  state_store.rs
docs/: PHASE_1_MIGRATION_GUIDE.md
