[workspace]
resolver = "2"
members = [
	"crates/*",
	"apps/freenet-ping/app",
	"apps/freenet-ping/types",
	"apps/freenet-ping/contracts/ping",
	"tests/test-contract-integration",
	"tests/test-contract-update-nochange",
	"tests/test-contract-mock-aligned"
]

[workspace.dependencies]
# Core utilities
ahash = "0.8"
boot-time = "0.1.2"
anyhow = "1"
arrayvec = { version = "0.7", features = ["serde"] }
bincode = "1"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
delegate = "0.13"
either = "1"
event-listener = "5"
hex = "0.4"
parking_lot = "0.12"
pav_regression = "0.6.1"
pin-project = "1"
thiserror = "2"
ulid = { version = "1.1", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }

# Async/networking
axum = { version = "0.8", default-features = false }
futures = "0.3"
socket2 = "0.6"
headers = "0.4"
hickory-resolver = { version = "0.24", features = ["dns-over-rustls"] }
http = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = "0.27.0"
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Multi-protocol APIs (Phase 3 preparation)
tonic = "0.12"
prost = "0.13"
async-graphql = "7"
async-graphql-axum = "7"

# Crypto
aes-gcm = "0.10"
blake3 = { version = "1", features = ["std", "traits-preview"] }
bs58 = "0.5"
chacha20poly1305 = "0.10"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Security and authentication (Phase 1)
x509-parser = "0.16"
ring = "0.17"
jsonwebtoken = "9"
oauth2 = "4"

# Data structures/storage
crossbeam = "0.8"
dashmap = "6.1"
lru = "0.16.3"
redb = "3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
moka = { version = "0.12", features = ["sync"] }

# File I/O
directories = "6"
dirs = "6"
flate2 = "1"
notify = "8"
tar = "0.4"
tempfile = "3"
xz2 = "0.1"

# Serialization
flatbuffers = "25.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
toml = "1.0"
humantime-serde = "1.1"

# CLI
clap = "4"
ctrlc = "3"

# Time
chrono = { version = "0.4", default-features = true }

# Random
rand = "0.9"

# Observability
opentelemetry = "0.31"
opentelemetry-jaeger = "0.22"
opentelemetry-otlp = "0.31.1"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3"
console-subscriber = "0.5.0"

# Metrics and monitoring (Phase 1)
prometheus = "0.13"
metrics = "0.22"
opentelemetry-prometheus = "0.15"

# WASM
wasmtime = { version = "43", features = ["cache"] }

# Testing/simulation
arbitrary = { version = "1", features = ["derive"] }
criterion = { version = "0.8", features = ["async_tokio"] }
freenet-test-network = "0.1.22"
httptest = "0.16"
proptest = "1"
regex = "1"
rstest = "0.26"
serial_test = "3"
statrs = "0.18"
test-log = "0.2"
testresult = "0.4"
turmoil = "0.7"
ureq = { version = "3.3", features = ["json"] }
which = "8.0"

# Versioning
semver = { version = "1", features = ["serde"] }

# Proc macros
darling = "0.23"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
trybuild = "1.0"

# AI/ML Infrastructure (Phase 1)
candle-core = "0.6"
candle-nn = "0.6"
# candle-optimizers = "0.6"  # Not available on crates.io
ort = "2.0.0-rc.12"
ndarray = "0.16"
polars = { version = "0.41", features = ["lazy", "temporal", "strings"] }

# Post-Quantum Cryptography (Phase 1)
ml-kem = "0.3.0-rc.0"
dilithium = "0.2.0-alpha.3"

# Enhanced Post-Quantum & Threshold Cryptography (Phase 1+)
libcrux = "0.0.3"                    # Formally verified crypto implementations
# shamir-secret-sharing = "2.1"  # Not available on crates.io (use shamir_secret_sharing)
frost-secp256k1 = "1.0"           # Threshold Schnorr signatures
# swanky = "0.12"  # Not available on crates.io (MPC framework)

# Asynchronous Byzantine Fault Tolerance (Phase 1+)
hbbft = "0.1"                    # Honey Badger BFT
# bft-rs = "0.1"                    # Efficient BFT library (not available on crates.io)

# Performance Optimization (Phase 1)
io-uring = "0.6"
# portable_simd = "0.3"  # Not available on crates.io
mimalloc = "0.1"

# Zero-Knowledge Proofs (Phase 2)
ark-groth16 = "0.5"
ark-bls12-381 = "0.5"
halo2_proofs = "0.3"

# Enhanced Zero-Knowledge & Privacy (Phase 2+)
plonky2 = "1.1"                   # High-performance recursive proofs
# differential-privacy = "0.3"  # Not available on crates.io      # DP mechanisms

# Federated Learning & Advanced ML (Phase 2+)
# rustfl = "0.2"  # Not available on crates.io (use RustFL = "0.3" when needed)
graph-algorithms = "0.1"         # Graph processing utilities

# Verifiable Delay Functions (Phase 2+)
# vdf-poa = "0.3"  # Not available on crates.io
# wesolowski-vdf = "0.2"  # Not available on crates.io

# Modern Networking (Phase 2)
quinn = "0.11"
h3 = "0.0.6"
web-transport = "0.1"

# Homomorphic Encryption (Phase 2)
tfhe = "0.8"
concrete = "2.11"

# Browser Integration (Phase 3)
# webrtc = "0.7"  # Conflicts with ureq→rustls→subtle ^2.5; upgrade to webrtc 0.12+ when needed
wasm-bindgen = "0.2"

# Distributed Systems (Phase 3)
raft = "0.7"
consistent_hash = "0.1"

# Enhanced Distributed Systems (Phase 3+)
chord-dht = "0.1"                 # Hierarchical DHT implementation

# GPU Acceleration & Hardware Optimization (Phase 3+)
cudarc = "0.12"                   # Rust CUDA bindings
gpu-allocator = "0.26"            # GPU memory management
# wgpu-compute = "22"  # Not available on crates.io

# Experimental Research Technologies (Phase 3+)
neuromorphic-drivers = "0.1"      # Spiking neural networks
# particle-swarm = "0.2"  # Not available on crates.io            # PSO for topology optimization
# tpm-rs = "0.4"  # Not available on crates.io (use tss-esapi instead)

# Platform-specific
libc = "0.2"
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
gag = "1"
winapi = "0.3"
zip = { version = "8", default-features = false, features = ["deflate", "time"] }

# Plugin system (Phase 3 preparation)
libloading = "0.8"
wasmtime-wasi = "43"
cap-std = "3"

# Freenet
freenet-stdlib = "0.3.5"

[profile.dev.package."*"]
opt-level = 3

# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
