[package]
name = "freenet"
version = "0.2.14"
edition = "2021"
rust-version = "1.80"
publish = true
description = "Freenet core software"
license-file = "LICENSE.md"
repository = "https://github.com/freenet/freenet-core"
readme = "README.md"

[package.metadata.freenet]
# Minimum compatible protocol version. Peers older than this are rejected.
# Updated by scripts/release.sh during releases. The env var
# FREENET_MIN_COMPATIBLE_VERSION overrides this at build time.
min-compatible-version = "0.2.13"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/freenet-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "freenet"

[[bin]]
name = "freenet"
path = "src/bin/freenet.rs"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
aes-gcm = { workspace = true }
axum = { default-features = false, features = ["http1", "matched-path", "query", "tower-log", "ws", "json"], workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
boot-time = { workspace = true }
bs58 = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
clap = { features = ["derive", "env"], workspace = true }
cookie = "0.18"
crossbeam = { workspace = true }
ctrlc = { features = ["termination"], workspace = true }
dashmap = { workspace = true }
delegate = { workspace = true }
directories = { workspace = true }
dirs = { workspace = true }
either = { features = ["serde"], workspace = true }
event-listener = { workspace = true }
flate2 = { workspace = true }
flatbuffers = { workspace = true }
futures = { workspace = true }
semver = { workspace = true }
headers = { workspace = true }
hex = { workspace = true }
hickory-resolver = { workspace = true }
hostname = "0.4"
notify = { workspace = true }
pav_regression = { workspace = true }
parking_lot = { workspace = true }
pin-project = { workspace = true }
rand = { features = ["small_rng"], workspace = true }
redb = { workspace = true, optional = true }
serde = { features = ["derive", "rc"], workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
toml = { workspace = true }
serde_with = { workspace = true }
humantime-serde = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"], optional = true }
moka = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "process", "tracing", "time", "test-util"] }
tokio-tungstenite = { workspace = true }
tower-http = { workspace = true }
ulid = { workspace = true }
zeroize = { workspace = true }
wasmtime = { workspace = true, optional = true }
xz2 = { workspace = true }
reqwest = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }

# Phase 1 security and authentication dependencies
x509-parser = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }

# Phase 1 monitoring and metrics dependencies
prometheus = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
opentelemetry-prometheus = { workspace = true, optional = true }

# Phase 3 preparation - Multi-protocol APIs and plugins
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
async-graphql = { workspace = true, optional = true }
async-graphql-axum = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
cap-std = { workspace = true, optional = true }

# Phase 1: AI/ML Infrastructure
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
# candle-optimizers = { workspace = true, optional = true }  # Not available on crates.io
ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
polars = { workspace = true, optional = true }

# Phase 1: Post-Quantum Cryptography
ml-kem = { workspace = true, optional = true }
dilithium = { workspace = true, optional = true }

# Phase 1+: Enhanced Post-Quantum & Threshold Cryptography
libcrux = { workspace = true, optional = true }
# shamir-secret-sharing not available on crates.io
frost-secp256k1 = { workspace = true, optional = true }
# swanky not available on crates.io

# Phase 1+: Asynchronous Byzantine Fault Tolerance
hbbft = { workspace = true, optional = true }
# bft-rs = { workspace = true, optional = true }  # Not available on crates.io

# Phase 1: Performance Optimization
io-uring = { workspace = true, optional = true }
# portable_simd not available on crates.io (nightly std::simd)
mimalloc = { workspace = true, optional = true }

# Phase 2: Zero-Knowledge Proofs
ark-groth16 = { workspace = true, optional = true }
ark-bls12-381 = { workspace = true, optional = true }
halo2_proofs = { workspace = true, optional = true }

# Phase 2: Modern Networking
quinn = { workspace = true, optional = true }
h3 = { workspace = true, optional = true }
web-transport = { workspace = true, optional = true }

# Phase 2: Homomorphic Encryption
tfhe = { workspace = true, optional = true }
concrete = { workspace = true, optional = true }

# Phase 3: Browser Integration
# webrtc conflicts with ureq→rustls subtle version requirements
wasm-bindgen = { workspace = true, optional = true }

# Phase 2+: Enhanced Zero-Knowledge & Privacy
plonky2 = { workspace = true, optional = true }
# differential-privacy = { workspace = true, optional = true }  # Not available

# Phase 2+: Federated Learning & Advanced ML
# rustfl not available on crates.io
graph-algorithms = { workspace = true, optional = true }

# Phase 2+: Verifiable Delay Functions
# vdf-poa not available on crates.io
# wesolowski-vdf not available on crates.io

# Phase 3: Distributed Systems
raft = { workspace = true, optional = true }
consistent_hash = { workspace = true, optional = true }

# Phase 3+: Enhanced Distributed Systems
chord-dht = { workspace = true, optional = true }

# Phase 3+: GPU Acceleration & Hardware Optimization
cudarc = { workspace = true, optional = true }
gpu-allocator = { workspace = true, optional = true }
# wgpu-compute not available on crates.io

# Phase 3+: Experimental Research Technologies
neuromorphic-drivers = { workspace = true, optional = true }
# particle-swarm = { workspace = true, optional = true }  # Not available
# tpm-rs not available on crates.io

# Tracing deps
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true, features = ["collector_client", "isahc", "rt-tokio"], optional = true }
# In release builds, TRACE/DEBUG spans are compiled out entirely via
# release_max_level_info, reducing the number of spans EnvFilter must evaluate.
# Debug builds retain all levels. RUST_LOG can filter among compiled-in levels.
tracing = { workspace = true, features = ["release_max_level_info"] }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["json"], optional = true }
tracing-appender = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }

# internal deps
freenet-stdlib = { features = ["net"], workspace = true }
console-subscriber = { workspace = true, optional = true }
tokio-stream = { workspace = true }
freenet-test-network = { workspace = true, optional = true }
turmoil = { workspace = true }  # Deterministic simulation scheduling (always enabled for SimNetwork)
lru = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }  # For sendmmsg syscall batching on Linux
gag = { workspace = true }  # For suppressing libunwind stderr warnings during WASM execution

# jemalloc replaces glibc malloc to prevent memory fragmentation in long-running processes.
# Only for linux-gnu targets — musl has its own allocator and jemalloc doesn't build on musl.
[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
tikv-jemallocator = { workspace = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["sysinfoapi"] }
serde = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
proptest = { workspace = true }
chrono = { features = ["arbitrary"], workspace = true }
criterion = { workspace = true }
freenet-stdlib = { features = ["net", "testing"], workspace = true }
freenet-macros = { path = "../freenet-macros" }
httptest = { workspace = true }
libc = { workspace = true }  # For sendmmsg syscall batching benchmarks
parking_lot = { workspace = true, features = ["deadlock_detection"] }
rstest = { workspace = true }
statrs = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
testresult = { workspace = true }
tokio-tungstenite = { workspace = true }
# console-subscriber = { version = "0.4" }
ureq = { workspace = true }
which = { workspace = true }
regex = { workspace = true }
serial_test = { workspace = true }

# CI-optimized benchmark suite (~5 min, deterministic)
[[bench]]
name = "transport_ci"
harness = false
required-features = ["bench"]

# Extended benchmark suite (~30-45 min, nightly)
# Includes high-latency paths, packet loss, large transfers, and micro-benchmarks
[[bench]]
name = "transport_extended"
harness = false
required-features = ["bench"]

# LEDBAT validation benchmarks (manual, ~3-5 min)
[[bench]]
name = "transport_ledbat"
harness = false
required-features = ["bench"]

# Manual throughput benchmarks (test harness, no criterion, ~3 sec)
[[bench]]
name = "transport_manual"
required-features = ["bench"]

# Full benchmark suite (manual, ~78 min, requires bench_full feature)
[[bench]]
name = "transport_full"
harness = false
required-features = ["bench", "bench_full"]

[build-dependencies]
chrono = { workspace = true }

[features]
default = ["redb", "trace", "websocket", "wasmtime-backend"]

# Existing core features
sqlite = ["sqlx"]
trace = ["tracing-subscriber", "tracing-appender"]
trace-ot = ["opentelemetry-jaeger", "trace", "tracing-opentelemetry", "opentelemetry-otlp"]
websocket = ["axum/ws"]
testing = ["freenet-stdlib/testing", "parking_lot/deadlock_detection"]
console-subscriber = ["dep:console-subscriber"]
test-network = ["dep:freenet-test-network"]
bench = []  # Exposes internal test infrastructure for benchmarking
bench_full = []  # Enables full benchmark suite (slow, ~78 min)
simulation_tests = []  # Simulation integration tests (run separately with --test-threads=1)
nightly_tests = []  # Nightly-only tests (long-running, resource-intensive)
jemalloc-prof = ["tikv-jemallocator/profiling", "dep:tikv-jemalloc-ctl"]  # jemalloc heap profiling (unix only)
wasmtime-backend = ["dep:wasmtime"]  # WASM runtime backend

# Phase 1: Foundation & High-Impact Enhancements
ml-routing = ["candle-core", "candle-nn", "ort", "ndarray", "polars"]
rl-congestion = ["candle-core", "ndarray"]
post-quantum = ["ml-kem", "dilithium"]
performance-opt = ["io-uring", "mimalloc"]

# Phase 1+ Enhanced Foundation (Tier 1: High Impact + Available)
quantum-safe = ["ml-kem", "dilithium", "libcrux"]
homomorphic-contracts = ["tfhe", "concrete"]
threshold-consensus = ["frost-secp256k1"]  # shamir-secret-sharing and swanky not on crates.io
bft-async = ["hbbft"]

# Phase 2: Advanced Capabilities
zk-privacy = ["ark-groth16", "ark-bls12-381", "halo2_proofs"]
modern-protocols = ["quinn", "h3", "web-transport"]
homomorphic = ["tfhe", "concrete"]
multi-protocol-api = ["tonic", "prost", "async-graphql"]

# Phase 2+ Advanced ML & Privacy (Tier 2: High Impact + Maturing)
federated-ml = []  # rustfl not available on crates.io
gnn-topology = ["graph-algorithms"]
vdf-fairness = []  # vdf-poa and wesolowski-vdf not on crates.io
enhanced-zkp = ["ark-groth16", "ark-bls12-381", "halo2_proofs", "plonky2"]
modern-protocols-plus = ["quinn", "h3", "web-transport", "tonic"]

# Phase 3: Platform Extensions
plugins = ["wasmtime-wasi", "libloading", "cap-std"]
browser-integration = ["wasm-bindgen"]  # webrtc removed (subtle version conflict)
distributed-consensus = ["raft", "consistent_hash"]

# Phase 3+ Experimental Platform (Tier 3: Experimental + Specialized)
gpu-acceleration = ["cudarc", "gpu-allocator"]  # wgpu-compute not on crates.io
privacy-gossip = []  # Disabled - differential-privacy not available
enhanced-plugins = ["wasmtime-wasi", "libloading", "cap-std"]
advanced-networking = ["raft", "consistent_hash", "chord-dht"]
browser-integration-plus = ["wasm-bindgen"]  # webrtc removed (subtle version conflict)

# Experimental Cutting-Edge (Research Phase)
neuromorphic = ["neuromorphic-drivers"]
swarm-intelligence = []  # Disabled - dependencies not available
hardware-security = []  # tpm-rs not on crates.io

# Enhanced Meta-Features Hierarchy
quantum-crypto = ["quantum-safe", "homomorphic-contracts"]
mpc-consensus = ["threshold-consensus", "bft-async"]
advanced-ml = ["federated-ml", "gnn-topology"]
privacy-platform = ["enhanced-zkp", "privacy-gossip", "quantum-crypto"]

# Meta-features for easy enablement (Legacy Compatibility)
cutting-edge = ["ml-routing", "rl-congestion", "post-quantum", "performance-opt"]
bleeding-edge = ["cutting-edge", "zk-privacy", "modern-protocols", "homomorphic"]
full-platform = ["bleeding-edge", "plugins", "browser-integration", "distributed-consensus"]

# Enhanced Tier-Based Enablement (Ultra-Cutting-Edge)
ultra-cutting-edge = ["cutting-edge", "quantum-crypto", "mpc-consensus"]
bleeding-edge-max = ["ultra-cutting-edge", "advanced-ml", "vdf-fairness", "modern-protocols-plus"]
experimental-platform = ["bleeding-edge-max", "gpu-acceleration", "privacy-platform"]
research-frontier = ["experimental-platform", "neuromorphic", "swarm-intelligence", "hardware-security"]

# Existing legacy features
admin-api = ["prometheus", "metrics", "opentelemetry-prometheus"]
security = ["x509-parser", "ring", "jsonwebtoken", "oauth2"]
enterprise = ["admin-api", "security"]
grpc-api = ["tonic", "prost"]
graphql-api = ["async-graphql", "async-graphql-axum"]

# Phase 1 enhancement features (duplicates removed - keeping original definitions above)

# Phase 3 preparation features already defined above

# ==============================================================================
# Lint Configuration
#
# These lints move runtime failure classes to compile-time errors.
# See: https://github.com/freenet/freenet-core/issues/3141
# ==============================================================================

[lints.rust]
# Catch discarded Results/Options on #[must_use] types and functions.
# This is the single highest-value lint: it turns silent failures into
# compile errors (e.g., ignored channel send results, dropped operation outcomes).
unused_must_use = "deny"

# Require `unsafe` blocks to carry a `// SAFETY: ...` comment explaining
# the invariant that makes the code sound. Prevents cargo-cult unsafe.
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
# Disallow `let _ = expr` when `expr` is #[must_use].
# Forces explicit handling or an intentional `drop()` call.
let_underscore_must_use = "deny"

# Flag `_ =>` catch-all arms on non-exhaustive enums.
# New variants added to an enum should trigger a compile error at every
# match site, not silently fall through a wildcard.
wildcard_enum_match_arm = "warn"

# Require `// SAFETY:` comments on every `unsafe` block.
undocumented_unsafe_blocks = "deny"
